# OCVirtual

./: CMakeLists.txt  CMakeUtils.cmake  main.cpp
include/: OCVirtual.h
lib/: CMakeLists.txt
lib/support/: Array.h  Ranges.h  UUID.h
source/: CMakeLists.txt  OCVirtual.cpp
source/Component/: CMakeLists.txt  Component.cpp  Component.h  ComponentID.cpp  ComponentID.h  ComponentType.h  Computer.cpp  Computer.h
source/Component/Type/: CMakeLists.txt  Computer.cpp  Computer.h  Modem.cpp  Modem.h
source/Ledger/: CMakeLists.txt  ComponentLedger.cpp  ComponentLedger.h
source/Network/: CMakeLists.txt  Network.cpp  Network.h
source/World/: CMakeLists.txt  Computer.cpp  Computer.h
test/: init.lua  prim.lua
test/system/: boot.lua  kernel.lua  shell.lua
test/system/lib/: package.lua  task.lua  terminal.lua
test/system/os/: ShrineOS.lua
